Görev 3 e kadar istenilenler yapıldı

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=9000
+
+
+
+
+server.servlet.context-path=/workintech/burgers
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
+
+spring.jpa.hibernate.ddl-auto=create
+
 
