--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ logging.level.org.hibernate.orm.jdbc.bind=TRACE
 spring.jpa.hibernate.ddl-auto=create
 
 
+# PostgreSQL Veritaban? Ba?lant? Ayarlar?
+spring.datasource.url=jdbc:postgresql://localhost:5432/s18d4
+spring.datasource.username=postgres
+spring.datasource.password=6186216
